// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QC Segment Context Menu renders QcSegmentContextMenu 1`] = `
<div>
  <div
    class="bp4-context-menu2"
  >
    <div />
  </div>
</div>
`;

exports[`QC Segment Context Menu renders QcSegmentContextMenu 2`] = `
<body
  class=""
>
  <div>
    <div
      class="bp4-context-menu2"
    >
      <div />
    </div>
  </div>
  <div
    class="bp4-portal"
  >
    <div
      class="bp4-context-menu2-virtual-target"
    />
  </div>
</body>
`;

exports[`QC Segment Context Menu renders QcSegmentContextMenu 3`] = `
<body
  class="bp4-overlay-open"
>
  <div>
    <div
      class="bp4-context-menu2"
    >
      <div />
    </div>
  </div>
  <div
    class="bp4-portal"
  >
    <div
      class="bp4-context-menu2-virtual-target"
      style="left: 100px; top: 100px;"
    />
  </div>
  <div
    class="bp4-portal"
  >
    <div
      aria-live="polite"
      class="bp4-overlay bp4-overlay-open"
    >
      <div
        class="bp4-overlay-start-focus-trap bp4-popover2-appear bp4-popover2-appear-active"
        tabindex="0"
      />
      <div
        class="bp4-overlay-backdrop bp4-popover2-backdrop bp4-context-menu2-backdrop bp4-popover2-appear bp4-popover2-appear-active"
      />
      <div
        class="bp4-popover2-transition-container bp4-overlay-content bp4-popover2-appear bp4-popover2-appear-active"
        style="position: fixed; left: 0px; top: 0px;"
      >
        <div
          class="bp4-popover2 bp4-minimal bp4-popover2-reference-hidden bp4-popover2-popper-escaped bp4-popover2-placement-right bp4-context-menu2-popover2"
          style="transform-origin: left center;"
        >
          <div
            class="bp4-popover2-content"
          >
            <div />
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`QC Segment Context Menu renders QcSegmentContextMenu 4`] = `
<body
  class="bp4-overlay-open"
>
  <div>
    <div
      class="bp4-context-menu2"
    >
      <div />
    </div>
  </div>
  <div
    class="bp4-portal"
  >
    <div
      class="bp4-context-menu2-virtual-target"
      style="left: 100px; top: 100px;"
    />
  </div>
  <div
    class="bp4-portal"
  >
    <div
      aria-live="polite"
      class="bp4-overlay bp4-overlay-open"
    >
      <div
        class="bp4-overlay-start-focus-trap bp4-popover2-appear bp4-popover2-appear-active"
        tabindex="0"
      />
      <div
        class="bp4-overlay-backdrop bp4-popover2-backdrop bp4-context-menu2-backdrop bp4-popover2-appear bp4-popover2-appear-active"
      />
      <div
        class="bp4-popover2-transition-container bp4-overlay-content bp4-popover2-appear bp4-popover2-appear-active"
        style="position: fixed; left: 0px; top: 0px;"
      >
        <div
          class="bp4-popover2 bp4-minimal bp4-popover2-reference-hidden bp4-popover2-popper-escaped bp4-popover2-placement-right bp4-context-menu2-popover2"
          style="transform-origin: left center;"
        >
          <div
            class="bp4-popover2-content"
          >
            <div>
              <ul
                class="bp4-menu"
                role="menu"
              >
                <li
                  class=""
                  role="none"
                >
                  <a
                    class="bp4-menu-item bp4-popover2-dismiss"
                    role="menuitem"
                    tabindex="0"
                    title="Open QC segment details"
                  >
                    <div
                      class="bp4-fill bp4-text-overflow-ellipsis"
                    >
                      Open QC segment details
                    </div>
                    <span
                      class="bp4-menu-item-label"
                    >
                      (alt)
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`QC Segment Context Menu renders QcSegmentContextMenu 5`] = `
<body
  class="bp4-overlay-open"
>
  <div>
    <div
      class="bp4-context-menu2"
    >
      <div />
    </div>
  </div>
  <div
    class="bp4-portal"
  >
    <div
      class="bp4-context-menu2-virtual-target"
      style="left: 100px; top: 100px;"
    />
  </div>
  <div
    class="bp4-portal"
  >
    <div
      aria-live="polite"
      class="bp4-overlay bp4-overlay-open"
    >
      <div
        class="bp4-overlay-start-focus-trap bp4-popover2-appear bp4-popover2-appear-active"
        tabindex="0"
      />
      <div
        class="bp4-overlay-backdrop bp4-popover2-backdrop bp4-context-menu2-backdrop bp4-popover2-appear bp4-popover2-appear-active"
      />
      <div
        class="bp4-popover2-transition-container bp4-overlay-content bp4-popover2-appear bp4-popover2-appear-active"
        style="position: fixed; left: 0px; top: 0px;"
      >
        <div
          class="bp4-popover2 bp4-minimal bp4-popover2-reference-hidden bp4-popover2-popper-escaped bp4-popover2-placement-right bp4-context-menu2-popover2"
          style="transform-origin: left center;"
        >
          <div
            class="bp4-popover2-content"
          >
            <div>
              <ul
                class="bp4-menu"
                role="menu"
              >
                <li
                  class=""
                  role="none"
                >
                  <a
                    class="bp4-menu-item bp4-popover2-dismiss"
                    role="menuitem"
                    tabindex="0"
                    title="Select QC segment"
                  >
                    <div
                      class="bp4-fill bp4-text-overflow-ellipsis"
                    >
                      Select QC segment
                    </div>
                    <span
                      class="bp4-menu-item-label"
                    >
                      (alt)
                    </span>
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`QC Segment Context Menu renders QcSegmentContextMenuContent 1`] = `<div />`;

exports[`QC Segment Context Menu renders QcSegmentContextMenuContent 2`] = `
<div>
  <ul
    class="bp4-menu"
    role="menu"
  >
    <li
      class=""
      role="none"
    >
      <a
        class="bp4-menu-item bp4-popover2-dismiss"
        role="menuitem"
        tabindex="0"
        title="Open QC segment details"
      >
        <div
          class="bp4-fill bp4-text-overflow-ellipsis"
        >
          Open QC segment details
        </div>
        <span
          class="bp4-menu-item-label"
        >
          (alt)
        </span>
      </a>
    </li>
  </ul>
</div>
`;

exports[`QC Segment Context Menu renders QcSegmentContextMenuContent 3`] = `
<div>
  <ul
    class="bp4-menu"
    role="menu"
  >
    <li
      class=""
      role="none"
    >
      <a
        class="bp4-menu-item bp4-popover2-dismiss"
        role="menuitem"
        tabindex="0"
        title="Select QC segment"
      >
        <div
          class="bp4-fill bp4-text-overflow-ellipsis"
        >
          Select QC segment
        </div>
        <span
          class="bp4-menu-item-label"
        >
          (alt)
        </span>
      </a>
    </li>
  </ul>
</div>
`;
